feat: add email module with SMTP and Sendinblue integrations, updated queue settings
