# sample/mongoose-app/src/modules/mailer/send-mail.dto.ts
@@ -1,0 +1,13 @@
+export class SendMailDto {
+  to: string;
+  subject: string;
+  text: string;
+  html?: string;
+  attachments?: MailAttachmentDto[];
+}
+
+export class MailAttachmentDto {
+  filename: string;
+  path?: string;
+  content?: string;
+}
